--- a/app.yaml
+++ b/app.yaml
@@ -5,16 +5,18 @@ api_version: 1
 threadsafe: true
 
 skip_files:
-- ^README\..*
 - \.gitignore
 - ^\.git/.*
-- ^fabfile\.py
 
 handlers:
-- url: (.*)/
-  static_files: app\1/index.html
-  upload: app
-
-- url: (.*)
-  static_files: app\1
-  upload: app
+- url: /css
+  static_dir: css
+- url: /js
+  static_dir: js
+- url: /img
+  static_dir: img
+- url: /
+  static_files: html/index.html
+  upload: html/index.html
+- url: /.*
+  static_dir: html
