--- a/app.yaml
+++ b/app.yaml
@@ -4,19 +4,19 @@ runtime: php
 api_version: 1
 
 handlers:
-- url: /(.*\.(htm$|html$|css$|js$))
+- url: /(.*\.(htm$|html$|css$|js$|ttf$))
   static_files: wordpress/\1
-  upload: wordpress/(.*\.(htm$|html$|css$|js$))
+  upload: wordpress/(.*\.(htm$|html$|css$|js$|ttf$))
   application_readable: true
 
-- url: /wp-content/(.*\.(ico$|jpg$|png$|gif$))
+- url: /wp-content/(.*\.*)
   static_files: wordpress/wp-content/\1
-  upload: wordpress/wp-content/(.*\.(ico$|jpg$|png$|gif$))
+  upload: wordpress/wp-content/(.*\.*)
   application_readable: true
 
-- url: /(.*\.(ico$|jpg$|png$|gif$))
+- url: /(.*\.*)
   static_files: wordpress/\1
-  upload: wordpress/(.*\.(ico$|jpg$|png$|gif$))
+  upload: wordpress/(.*\.*)
 
 - url: /wp-admin/(.+)
   script: wordpress/wp-admin/\1
