--- a/app.yaml
+++ b/app.yaml
@@ -4,19 +4,22 @@ runtime: php
 api_version: 1
 
 handlers:
-- url: /(.*\.(htm$|html$|css$|js$|ttf$|jpg$|jpeg$|otf$|php$))
+- url: /wp-content/themes/fuse/library/css/custom.css.php
+  script: wordpress/wp-content/themes/fuse/library/css/custom.css.php
+
+- url: /(.*\.(htm$|html$|css$|js$|ttf$|jpg$|jpeg$|otf$))
   static_files: wordpress/\1
-  upload: wordpress/(.*\.(htm$|html$|css$|js$|ttf$|jpg$|jpeg$|otf$|php$))
+  upload: wordpress/(.*\.(htm$|html$|css$|js$|ttf$|jpg$|jpeg$|otf$))
   application_readable: true
 
-- url: /wp-content/(.*\.(ico$|jpg$|png$|gif$|ttf$|jpeg$|htm$|html$|css$|js$|otf$|php$))
+- url: /wp-content/(.*\.(ico$|jpg$|png$|gif$|ttf$|jpeg$|htm$|html$|css$|js$|otf$))
   static_files: wordpress/wp-content/\1
-  upload: wordpress/wp-content/(.*\.(ico$|jpg$|png$|gif$|ttf$|jpeg$|htm$|html$|css$|js$|otf$|php$))
+  upload: wordpress/wp-content/(.*\.(ico$|jpg$|png$|gif$|ttf$|jpeg$|htm$|html$|css$|js$|otf$))
   application_readable: true
 
-- url: /(.*\.(ico$|jpg$|png$|gif$|ttf$|jpeg$|htm$|html$|css$|js$|otf$|php$))
+- url: /(.*\.(ico$|jpg$|png$|gif$|ttf$|jpeg$|htm$|html$|css$|js$|otf$))
   static_files: wordpress/\1
-  upload: wordpress/(.*\.(ico$|jpg$|png$|gif$|ttf$|jpeg$|htm$|html$|css$|js$|otf$|php$))
+  upload: wordpress/(.*\.(ico$|jpg$|png$|gif$|ttf$|jpeg$|htm$|html$|css$|js$|otf$))
 
 - url: /wp-admin/(.+)
   script: wordpress/wp-admin/\1
